--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     menuIcon.style.transform = 'translate(0,0)';
                     blurBg.style.display = "block";
 
+
                 } else {
                     navList.style.transform = 'translate(-100%,0)';
                     menuIcon.style.transform = 'translate(-6rem,0)';
@@ -34,205 +35,231 @@
     </script>
 </head>
 <body>
-    <div class="header-list">
-        <div class="header-item">
-            <img src="img/rexiao.png" alt="">
-            <p>热销榜</p>
-        </div>
-        <div class="header-item">
-            <img src="img/caidan.png" alt="">
-            <p>点过的菜</p>
-        </div>
-        <div class="header-item">
-            <img src="img/sousuo.png" alt="">
-            <p>搜菜</p>
-        </div>
+<div class="header-list">
+    <div class="header-item">
+        <img src="img/rexiao.png" alt="">
+        <p>热销榜</p>
     </div>
-
-    <div class="dish-group">
-        <h3 class="group-name">素菜类</h3>
-        <ul class="dish-content">
-            <li>
-                <div class="item">
-                    <img src="img/1.jpeg" alt="">
-                    <p>大蒜腊肉</p>
-                    <p>￥26</p>
-                </div>
-            </li>
-
-            <li>
-                <div class="item">
-                    <img src="img/2.jpeg" alt="">
-                    <p>大蒜腊肉</p>
-                    <p>￥26</p>
-                </div>
-            </li>
-
-            <li>
-                <div class="item">
-                    <img src="img/3.jpeg" alt="">
-                    <p>大蒜腊肉</p>
-                    <p>￥26</p>
-                </div>
-            </li>
-
-            <li>
-                <div class="item">
-                    <img src="img/4.jpeg" alt="">
-                    <p>大蒜腊肉</p>
-                    <p>￥26</p>
-                </div>
-            </li>
-
-            <li>
-
-                <div class="item">
-                    <img src="img/5.jpeg" alt="">
-                    <p>大蒜腊肉</p>
-                    <p>￥26</p>
-                </div>
-            </li>
-
-            <li>
-                <div class="item">
-                    <img src="img/6.jpeg" alt="">
-                    <p>大蒜腊肉</p>
-                    <p>￥26</p>
-                </div>
-            </li>
-        </ul>
+    <div class="header-item">
+        <img src="img/caidan.png" alt="">
+        <p>点过的菜</p>
     </div>
-
-    <div class="dish-group">
-        <h3 class="group-name">素菜类</h3>
-        <ul class="dish-content">
-            <li>
-                <div class="item">
-                    <img src="img/1.jpeg" alt="">
-                    <p>大蒜腊肉</p>
-                    <p>￥26</p>
-                </div>
-            </li>
-
-            <li>
-                <div class="item">
-                    <img src="img/2.jpeg" alt="">
-                    <p>大蒜腊肉</p>
-                    <p>￥26</p>
-                </div>
-            </li>
-
-            <li>
-                <div class="item">
-                    <img src="img/3.jpeg" alt="">
-                    <p>大蒜腊肉</p>
-                    <p>￥26</p>
-                </div>
-            </li>
-
-            <li>
-                <div class="item">
-                    <img src="img/4.jpeg" alt="">
-                    <p>大蒜腊肉</p>
-                    <p>￥26</p>
-                </div>
-            </li>
-
-            <li>
-
-                <div class="item">
-                    <img src="img/5.jpeg" alt="">
-                    <p>大蒜腊肉</p>
-                    <p>￥26</p>
-                </div>
-            </li>
-
-            <li>
-                <div class="item">
-                    <img src="img/6.jpeg" alt="">
-                    <p>大蒜腊肉</p>
-                    <p>￥26</p>
-                </div>
-            </li>
-        </ul>
+    <div class="header-item">
+        <img src="img/sousuo.png" alt="">
+        <p>搜菜</p>
     </div>
+</div>
 
-    <div class="dish-group">
-        <h3 class="group-name">素菜类</h3>
-        <ul class="dish-content">
-            <li>
-                <div class="item">
-                    <img src="img/1.jpeg" alt="">
-                    <p>大蒜腊肉</p>
-                    <p>￥26</p>
-                </div>
-            </li>
+<div class="dish-group">
+    <h3 class="group-name">素菜类</h3>
+    <ul class="dish-content">
+        <li>
+            <div class="item">
+                <img src="img/1.jpeg" alt="">
+                <p>大蒜腊肉</p>
+                <p>￥26</p>
+            </div>
+        </li>
 
-            <li>
-                <div class="item">
-                    <img src="img/2.jpeg" alt="">
-                    <p>大蒜腊肉</p>
-                    <p>￥26</p>
-                </div>
-            </li>
+        <li>
+            <div class="item">
+                <img src="img/2.jpeg" alt="">
+                <p>大蒜腊肉</p>
+                <p>￥26</p>
+            </div>
+        </li>
 
-            <li>
-                <div class="item">
-                    <img src="img/3.jpeg" alt="">
-                    <p>大蒜腊肉</p>
-                    <p>￥26</p>
-                </div>
-            </li>
+        <li>
+            <div class="item">
+                <img src="img/3.jpeg" alt="">
+                <p>大蒜腊肉</p>
+                <p>￥26</p>
+            </div>
+        </li>
 
-            <li>
-                <div class="item">
-                    <img src="img/4.jpeg" alt="">
-                    <p>大蒜腊肉</p>
-                    <p>￥26</p>
-                </div>
-            </li>
+        <li>
+            <div class="item">
+                <img src="img/4.jpeg" alt="">
+                <p>大蒜腊肉</p>
+                <p>￥26</p>
+            </div>
+        </li>
 
-            <li>
+        <li>
 
-                <div class="item">
-                    <img src="img/5.jpeg" alt="">
-                    <p>大蒜腊肉</p>
-                    <p>￥26</p>
-                </div>
-            </li>
+            <div class="item">
+                <img src="img/5.jpeg" alt="">
+                <p>大蒜腊肉</p>
+                <p>￥26</p>
+            </div>
+        </li>
 
-            <li>
-                <div class="item">
-                    <img src="img/6.jpeg" alt="">
-                    <p>大蒜腊肉</p>
-                    <p>￥26</p>
-                </div>
-            </li>
-        </ul>
-    </div>
-
-    <ul class="nav-list" id="nav-list">
-        <li>精品美食</li>
-        <li>精品小面</li>
-        <li>饮料酒水</li>
-        <li>新品推荐</li>
-        <li>舌尖美食</li>
-        <li>店长推荐</li>
+        <li>
+            <div class="item">
+                <img src="img/6.jpeg" alt="">
+                <p>大蒜腊肉</p>
+                <p>￥26</p>
+            </div>
+        </li>
     </ul>
-    <div class="menu" id="menu-icon">
+</div>
+
+<div class="dish-group">
+    <h3 class="group-name">素菜类</h3>
+    <ul class="dish-content">
+        <li>
+            <div class="item">
+                <img src="img/1.jpeg" alt="">
+                <p>大蒜腊肉</p>
+                <p>￥26</p>
+            </div>
+        </li>
+
+        <li>
+            <div class="item">
+                <img src="img/2.jpeg" alt="">
+                <p>大蒜腊肉</p>
+                <p>￥26</p>
+            </div>
+        </li>
+
+        <li>
+            <div class="item">
+                <img src="img/3.jpeg" alt="">
+                <p>大蒜腊肉</p>
+                <p>￥26</p>
+            </div>
+        </li>
+
+        <li>
+            <div class="item">
+                <img src="img/4.jpeg" alt="">
+                <p>大蒜腊肉</p>
+                <p>￥26</p>
+            </div>
+        </li>
+
+        <li>
+
+            <div class="item">
+                <img src="img/5.jpeg" alt="">
+                <p>大蒜腊肉</p>
+                <p>￥26</p>
+            </div>
+        </li>
+
+        <li>
+            <div class="item">
+                <img src="img/6.jpeg" alt="">
+                <p>大蒜腊肉</p>
+                <p>￥26</p>
+            </div>
+        </li>
+    </ul>
+</div>
+
+<div class="dish-group">
+    <h3 class="group-name">素菜类</h3>
+    <ul class="dish-content">
+        <li>
+            <div class="item">
+                <img src="img/1.jpeg" alt="">
+                <p>大蒜腊肉</p>
+                <p>￥26</p>
+            </div>
+        </li>
+
+        <li>
+            <div class="item">
+                <img src="img/2.jpeg" alt="">
+                <p>大蒜腊肉</p>
+                <p>￥26</p>
+            </div>
+        </li>
+
+        <li>
+            <div class="item">
+                <img src="img/3.jpeg" alt="">
+                <p>大蒜腊肉</p>
+                <p>￥26</p>
+            </div>
+        </li>
+
+        <li>
+            <div class="item">
+                <img src="img/4.jpeg" alt="">
+                <p>大蒜腊肉</p>
+                <p>￥26</p>
+            </div>
+        </li>
+
+        <li>
+
+            <div class="item">
+                <img src="img/5.jpeg" alt="">
+                <p>大蒜腊肉</p>
+                <p>￥26</p>
+            </div>
+        </li>
+
+        <li>
+            <div class="item">
+                <img src="img/6.jpeg" alt="">
+                <p>大蒜腊肉</p>
+                <p>￥26</p>
+            </div>
+        </li>
+    </ul>
+</div>
+
+
+<ul class="nav-list" id="nav-list">
+    <li>精品美食</li>
+    <li>精品小面</li>
+    <li>饮料酒水</li>
+    <li>新品推荐</li>
+    <li>舌尖美食</li>
+    <li>店长推荐</li>
+</ul>
+<div class="menu" id="menu-icon">
     <img src="img/nav.png" alt="菜单图标记">
     <p>菜单</p>
-    </div>
-    <div class="blur-bg" id="blur-bg"></div>
+</div>
+<div class="blur-bg" id="blur-bg"></div>
 
 
-    <div class="nav-btn">
-        <img src="img/navigation.png" alt="导航图标">
-        <p>导航</p>
-    </div>
-    <div class="cart-btn">
-        <img src="img/cart.png" alt="购物车图标">
-        <p>已点</p>
-    </div>
+<div class="nav-btn">
+    <img src="img/navigation.png" alt="导航图标">
+    <p>导航</p>
+</div>
+
+<div class="footer-nav-content">
+    <ul>
+        <li>
+            <img src="img/menu.png" alt="">
+            <p>菜单</p>
+        </li>
+        <li>
+            <img src="img/order.png" alt="">
+            <p>购物车</p>
+        </li>
+        <li>
+            <img src="img/cart.png" alt="">
+            <p>我的订单</p>
+        </li>
+        <li>
+            <img src="img/wallet.png" alt="">
+            <p>结账</p>
+        </li>
+        <li>
+            <img src="img/close.png" alt="">
+            <p>返回</p>
+        </li>
+    </ul>
+</div>
+<div class="cart-btn">
+    <img src="img/cart.png" alt="购物车图标">
+    <p>已点</p>
+</div>
 </body>
 </html>
