增加购物车页"顾客常用菜"水平滑动条目 增加order页面 静态页面

--- a/cart.html
+++ b/cart.html
@@ -97,5 +97,53 @@
         <img src="img/doorder.png" alt="">
         <p>下单</p>
     </div>
+
+    <div class="customs-favors">
+        <h3>本店顾客最常点的菜</h3>
+        <div class="horizontal-list">
+            <ul>
+                <li class="item">
+                    <img src="img/2.jpeg" alt="" class="product-pic">
+                    <p class="product-name">青椒炒肉</p>
+                    <p class="price">￥26</p>
+                </li>
+                <li class="item">
+                    <img src="img/2.jpeg" alt="" class="product-pic">
+                    <p class="product-name">青椒炒肉</p>
+                    <p class="price">￥26</p>
+                </li>
+                <li class="item">
+                    <img src="img/2.jpeg" alt="" class="product-pic">
+                    <p class="product-name">青椒炒肉</p>
+                    <p class="price">￥26</p>
+                </li>
+                <li class="item">
+                    <img src="img/2.jpeg" alt="" class="product-pic">
+                    <p class="product-name">青椒炒肉</p>
+                    <p class="price">￥26</p>
+                </li>
+                <li class="item">
+                    <img src="img/2.jpeg" alt="" class="product-pic">
+                    <p class="product-name">青椒炒肉</p>
+                    <p class="price">￥26</p>
+                </li>
+                <li class="item">
+                    <img src="img/2.jpeg" alt="" class="product-pic">
+                    <p class="product-name">青椒炒肉</p>
+                    <p class="price">￥26</p>
+                </li>
+                <li class="item">
+                    <img src="img/2.jpeg" alt="" class="product-pic">
+                    <p class="product-name">青椒炒肉</p>
+                    <p class="price">￥26</p>
+                </li>
+                <li class="item">
+                    <img src="img/2.jpeg" alt="" class="product-pic">
+                    <p class="product-name">青椒炒肉</p>
+                    <p class="price">￥26</p>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
